# class-mate

./: .gitignore  README.md  bunny-pipeline.md  chapters.json  cookies.txt  openapi.json  package.json  pipeline.md  scaffoldplan.md
backend/: .gitignore  README.md  alembic.ini  conftest.py  docker-compose.yml  env.example  package.json  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_users_table.py  0002_create_refresh_sessions_table.py  0003_create_courses_table.py  0004_create_course_contents_table.py  0005_add_display_name_to_users_table.py  0006_create_chat_tables.py  0007_create_video_assets_and_transcript_segments.py  0008_create_video_chapters_and_segment_chapter_fields.py  0008_recreate_video_assets_v2.py  0009_add_source_to_video_chapters.py  0009_add_video_assets_audio_key.py  0010_enforce_video_assets_content_id_cascade.py  0010_video_assets_local_upload.py  0011_rename_course_content_categories.py  0011_video_assets_thumbnails.py  (+3 more)
backend/app/: __init__.py  main.py
backend/postgres/: Dockerfile
backend/scripts/: create_user.py
backend/src/: index.js
backend/tests/: test_auth_flow.py  test_bunny_webhook_and_ingest.py  test_citation_mapping_from_chunk_meta.py  test_course_chat.py  test_course_contents_delete_s3.py  test_courses_api.py  test_media_assets_api.py  test_migrations.py  test_pdf_ingestion_job.py  test_postgres_retrieval.py  test_pptx_ingestion_job.py  test_rag_chat_integration.py  test_transcription_pipeline_mocked.py  test_validation_guards.py  test_video_assets_api.py
(+104 files in other folders)
