[project]
name = "classmate-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.118.0,<0.119.0",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.27",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "alembic>=1.11",
]

[tool.ruff]
line-length = 100


