[project]
name = "classmate-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.118.0,<0.119.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.27,<1.0",
  "PyJWT[crypto]>=2.0,<3.0",
  "bcrypt>=4.0.1,<5.0",
  "email-validator>=2.0,<3.0",
  "boto3>=1.34,<2.0",
  "langchain>=0.3,<1.0",
  "langchain-google-genai>=2.0,<5.0",
  "chromadb>=0.5,<1.0",
  "langchain-community>=0.3,<1.0",
  "langchain-text-splitters>=0.3,<1.0",
  "pypdf>=4.0,<6.0",
  "sentence-transformers>=2.6,<4.0",
  "langchain-huggingface>=0.3.1",
  "langchain-chroma>=0.2.0",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "alembic>=1.11",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100


